<resources>
    <string name="app_name">ActorPayApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="account_balance">Account Balance</string>
    <string name="wallet_to_wallet">Wallet To Wallet</string>
    <string name="wallet_to_bank">Wallet To Bank</string>
    <string name="enter_mobile_no_or_email">Enter Mobile No. Or Email</string>
    <string name="misc">Misc.</string>
    <string name="there_are_many_variations">There are many variations</string>
    <string name="dummy_cancel_amount">\u00241500</string>
    <string name="dummy_actual_amount">\u00241700</string>
    <string name="dummy_text">An Order ID in this unique number associated with every our secure checkout</string>
    <string name="buy_now">BUY NOW</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="product_list">Product List</string>
    <string name="login">Login</string>
    <string name="my_order">My Order</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">or</string>
    <string name="notification">Notification</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="faq">FAQ</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="user_type">User Type</string>
    <string name="redeem">Redeem</string>

    <string name="not_connected_internet">Not connected to Internet</string>
    <string name="logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="wallet_statement">Wallet Statement</string>
    <string name="my_orders">My Orders</string>
    <string name="change_payment_option">Change Payment Option</string>
    <string name="settings">Settings</string>
    <string name="more">More</string>
    <string name="home">Home</string>
    <string name="rewards">Rewards</string>
    <string name="name">Name</string>
    <string name="splash">Splash</string>


</resources>