<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.octal.actorpay.ui.dashboard.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/transferMoneyFragment"
        android:name="com.octal.actorpay.TransferMoneyFragment"
        android:label="@string/transfer_money"
        tools:layout="@layout/fragment_transfer_money" />
    <fragment
        android:id="@+id/productListFragment"
        android:name="com.octal.actorpay.ProductsListFragment"
        android:label="@string/product_list"
        tools:layout="@layout/fragment_products_list" />

    <fragment
        android:id="@+id/notificationFragment"
        android:name="com.octal.actorpay.NotificationFragment"
        android:label="@string/notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.octal.actorpay.auth.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/myOrderFragment"
        android:name="com.octal.actorpay.MyOrdersListFragment"
        android:label="@string/my_order"
        tools:layout="@layout/fragment_my_order_list" />
    <fragment
        android:id="@+id/rewardsFragment"
        android:name="com.octal.actorpay.rewards_points.RewardsPointsFragment"
        android:label="@string/rewards"
        tools:layout="@layout/fragment_rewards_points" />
    <fragment
        android:id="@+id/walletFragment"
        android:name="com.octal.actorpay.WalletStatementFragment"
        android:label="@string/wallet_statement"
        tools:layout="@layout/fragment_walletw_statement" />
    <fragment
        android:id="@+id/miscFragment"
        android:name="com.octal.actorpay.MiscFragment"
        android:label="@string/misc"
        tools:layout="@layout/fragment_misc" />

</navigation>