<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_bg_color"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="90dp"
                android:layout_height="95dp"
                android:layout_centerVertical="true"
                android:background="@drawable/round_wallet_bg"
                android:src="@drawable/logo" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/productImage"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/productTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:paddingEnd="10dp"
                    android:singleLine="true"
                    android:text="@string/there_are_many_variations"
                    android:textColor="#383838"
                    android:textSize="16sp"
                    app:drawableEndCompat="@drawable/like_small"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/cancelPriceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/productTitle"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/dummy_cancel_amount"
                    android:textColor="#ed3460"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/actualPriceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/productTitle"
                    android:layout_toEndOf="@id/cancelPriceText"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingStart="10dp"
                    android:text="@string/dummy_actual_amount"
                    android:textColor="@color/blue_color"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/productDisc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/actualPriceText"
                    android:fontFamily="@font/poppins_regular"
                    android:maxLines="2"
                    android:text="@string/dummy_text"
                    android:textSize="12sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buyNow"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_below="@id/productDisc"
                    android:backgroundTint="@color/pink_color"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:text="@string/buy_now"
                    android:textSize="12sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addToCart"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_below="@id/productDisc"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/buyNow"
                    android:backgroundTint="@color/blue_color"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/add_to_cart"
                    android:textSize="12sp"
                    android:gravity="center"/>

            </RelativeLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>