<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingTop="60dp"
    tools:context=".TransferMoneyFragment">

    <include
        layout="@layout/common_toolbar"
        android:id="@+id/toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="30dp"
        android:id="@+id/linear_layout"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginEnd="8dp"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/text_color"
            android:background="@drawable/round_wallet_bg"
            android:layout_height="wrap_content"
            android:text="@string/wallet_to_wallet"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginStart="8dp"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/text_color"
            android:background="@drawable/round_wallet_blue_bg"
            android:layout_height="wrap_content"
            android:text="@string/wallet_to_bank"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:id="@+id/enterMobileText"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_light"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/linear_layout"
        android:text="@string/enter_mobile_no_or_email"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailNumberField"
        app:layout_constraintTop_toBottomOf="@id/enterMobileText"
        android:background="@drawable/round_wallet_bg"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:singleLine="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:drawableEnd="@drawable/ic_baseline_contact_mail_24" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/emailNumberField"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/round_corner_white_bg"/>


</androidx.constraintlayout.widget.ConstraintLayout>